# meson-example

./: README.md  meson.build
src/: main.c  mem_leak.c  mem_no_leak.c  ub-test.c
